started writing thesis...

--- a/template/template.tex
+++ b/template/template.tex
@@ -11,7 +11,7 @@
 
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath, amsthm, amssymb}
-\usepackage[nenglish]{babel}
+\usepackage[ngerman]{babel}
 %\usepackage[english]{babel} % Language hyphenation and typographical rules
 \usepackage{marvosym}
 \usepackage{graphics}
@@ -127,42 +127,42 @@
 \linebreak[4]
 \linebreak[4]
 \linebreak[4]
-\textit{\Large Recognizing and correcting reading-errors in DNA sequences }
+\textit{\large Titel der Abschlussarbeit}
 \linebreak[4]
 \linebreak[4]
 \linebreak[4]
-Thesis 
+Abschlussarbeit 
 \linebreak[4]
 \linebreak[4]
-to obtain the academic degree: 
+zur Erlangung des akademischen Grades: 
 \linebreak[4]
 \linebreak[4]
-\textbf{Bachelor of Science (B.Sc.)}
+\textbf{Bachelor of Science (B.Sc.)} oder \textbf{Master of Science (M.Sc.)}
 \linebreak[4]
 \linebreak[4]
-at the
+an der
 \linebreak[4]
 \linebreak[4]
-University of Applied Sciences (HTW) Berlin
+Hochschule f\"ur Technik und Wirtschaft (HTW) Berlin
 \linebreak[4]
-Department 4: Computer Science, Communication and Business
+Fachbereich 4: Informatik, Kommunikation und Wirtschaft
 \linebreak[4]
-Course of studies \textit{Applied Computer Science}
-\linebreak[4]
-\linebreak[4]
-\linebreak[4]
-1. Reviewer: Mr. Prof. Dr. Christian Herta\linebreak[4]
-2. Reviewer: Mr. Dr. Christian Herta\linebreak[4]
+Studiengang \textit{Angewandte Informatik}
 \linebreak[4]
 \linebreak[4]
 \linebreak[4]
-\linebreak[4]
-Submitted by Fabian Vogt [Matriculation no. s0570800]
+1. Gutachter\_in: Titel akademischer Grad Vorname Nachname\linebreak[4]
+2. Gutachter\_in: Titel akademischer Grad Vorname Nachname\linebreak[4]
 \linebreak[4]
 \linebreak[4]
 \linebreak[4]
 \linebreak[4]
-06.12.2022
+Eingereicht von Vorname Nachname [Matrikelnr.]
+\linebreak[4]
+\linebreak[4]
+\linebreak[4]
+\linebreak[4]
+Datum
 
 \end{center}
 \end{titlepage}
@@ -172,18 +172,18 @@ Submitted by Fabian Vogt [Matriculation no. s0570800]
 % vertikaler Leerraum
 \vspace*{2.2cm}
 \noindent %kein Einzug
-{\Huge Acknowledgement}\\
+{\Huge Danksagung}\\
 \vspace*{1.6cm} \\
 
 % Kopfzeilen (automatisch erzeugt)
 %\pagestyle{headings}
-[Text of Acknowledgement]
+[Text der Danksagung]
 
 % Seite mit Abstracts
-\newpage   
-\thispagestyle{empty}    % keine Seitennummer
-\section*{Summary}
-[Text of Summary]
+\newpage
+\thispagestyle{empty}       % keine Seitennummer
+\section*{Zusammenfassung}
+[Text der Zusammenfassung]
 
 \section*{Abstract}
 [Summary of the thesis]
@@ -218,12 +218,12 @@ Submitted by Fabian Vogt [Matriculation no. s0570800]
  %Seite 1
  % \setcounter{page}{1}   % setzt Seitenzaehlung auf 1
  
- \chapter{Introduction}
+ \chapter{Einleitung}
 \fbox{\parbox{\linewidth}{
-DNA RL Intro...
+Vorliegendes Template enth\"alt exemplarisch (und damit unvollst\"andig) Gliederungspunkte, Bestandteile und Hinweise f\"ur ein typisches Softwareentwicklungsprojekt, bei dem ein Prototyp erstellt wird. Es dient als Hilfestellung zu Ihrer weiteren Verwendung. Selbstverst\"andlich m\"ussen Sie selbst weitere Erg\"anzungen und Anpassungen vornehmen.
 
 \begin{center}
-\textbf{this text is bold!}
+\textbf{Viel Erfolg sowie gutes Gelingen bei Ihrer Abschlussarbeit!}
 \end{center}
 }}
 \\
@@ -277,8 +277,7 @@ ID (nickname) & Ort & Gr\"o"se/L\"ange (in mm) \\
 \end{tabular}
 \end{table}
 
-\section{Section}
-Hintergrund der Arbeit
+\section{Hintergrund der Arbeit}
 [Beschreibung des groben Kontextes der Arbeit; im Detail sollten Sie dies im Grundlagenteil darstellen] 
 
 
@@ -290,11 +289,11 @@ Hintergrund der Arbeit
 [Beschreibung des Aufbaus der Arbeit]
 
 
-\chapter{Theorie}
+\chapter{Grundlagen}
 [Beschreibung des Kontextes der Arbeit mit allen durch die Problemstellung tangierten Bereichen, Methoden, Theorien, Erkenntnissen, Technologien, ... ] 
 
 
-\section{Introduction to Machine Learning}
+\section{Kontext}
 
 
 \subsection{Domain} 
@@ -307,7 +306,7 @@ Hintergrund der Arbeit
 \subsection{Methoden und Konzepte}
 
 
-\section{Transformer Model}
+\section{...}
 
 
 \subsection{...}
@@ -315,25 +314,7 @@ Hintergrund der Arbeit
 
 \subsection{...}
 
-\section{BERT Model}
-
-
-\subsection{...}
-
-
-\subsection{...}
-
-\section{Reinforcement Learning}
-
-
-\subsection{Basics}
-
-
-\subsection{DNA Correction Game}
-
-\subsection{Different approaches}
-
-\chapter{Methodology}
+\chapter{Methodologie}
 
 [Beschreibung des geplanten Vorgehens(-modells) zur L\"osung der Problemstellung; umfasst u.a.:
 \begin{itemize}
@@ -342,18 +323,18 @@ Hintergrund der Arbeit
 \item Umsetzung (Implementierung)]
 \end{itemize}
 
-\section{Transformer}
+\section{Ergebnisartefakte}
 [Beschreibung der Ergebnisse / Ergebnistypen, welche Sie im Rahmen der Probleml\"osung generieren / erzielen wollen, z.B. Algorithmus, Prototyp einer Software(komponente), ... ]
 
-\section{Reinforcement Learning}
+\section{Datenschutzaspekte}
 [Beschreibung von Aspekten des Datenschutzes im Zusammenhang mit Ihrer Abschlussarbeit]
 
-\section{...}
+\section{Ethische Aspekte}
 [Beschreibung von Aspekten der Ethik\footnote{vgl. hierzu erg\"anzend allgemeine Codizes (z.B. \autocite{acm}, \autocite{ieee} oder \autocite{gi}) sowie auch domain-spezifische Normen und Verfahrensweisen im Rahmen einer kritischen Reflektion.}im Zusammenhang mit Ihrer Abschlussarbeit]
 
 
 
-\chapter{Requirements}
+\chapter{Anforderungserhebung und -analyse}
 [Beschreibung der Erhebung, Granularisierung und Priorisierung der zu Grunde liegenden Anforderungen]
 \section{Nutzer- und Systemanforderungen}
 \subsection{Funktionale Anforderungen}
@@ -368,7 +349,7 @@ Hintergrund der Arbeit
 
 
 
-\chapter{Concept \& Design}
+\chapter{Konzeption \& Entwurf}
 [Beschreibung des Entwurfs auf Basis der Methodologie / der geplanten Vorgehensweise zur Probleml\"osung im Kontext der Anforderungen (i.A. der Art der Arbeit)]
 \section{Prozess}
 \section{Systemarchitektur}
@@ -379,7 +360,7 @@ Hintergrund der Arbeit
 
 
 
-\chapter{Implementation}
+\chapter{Implementierung}
 
 [Beschreibung der Implementierung\footnotemark auf Basis des Entwurfs und der Methodologie / der geplanten Vorgehensweise zur Probleml\"osung im Kontext der Anforderungen. Hier ist Raum f\"ur Listings, wie z.B. das nun Folgende:
 
@@ -397,19 +378,19 @@ object HelloWorld {
 Umfangreicher Quell-Code sollte in den Anhang ausgelagert werden.]
 
 
-\chapter{Tests}
+\chapter{Test}
 [Beschreibung, wie Sie auf Basis des geplanten Testvorgehens was mit welchen Kriterien und Technologien getestet haben]
 
-\chapter{Presentation & Evaluation of Results}
+\chapter{Darstellung und Bewertung der Ergebnisse}
 [Beschreibung der Ergebnisse aus allen voran gegangenen Kapiteln sowie der zuvor generierten Ergebnisartefakte mit Bewertung, wie diese einzuordnen sind]
 
-\chapter{Summary}
+\chapter{Zusammenfassung}
 [Aggregierte retrograde Kurzbeschreibung der Arbeit]
-\section{Conclusions}
+\section{Schlussfolgerungen}
 [Beschreibung der insgesamt zu konstatierenden Schlussfolgerungen im Zusammenhang mit der Arbeit]
-\section{Limitations}
+\section{Limitationen}
 [Beschreibung der Ergebnisse einer kritischen Reflektion und Begr\"undung dessen, was die Arbeit nicht zu leisten vermag]
-\section{Outlook}
+\section{Ausblick}
 [Beschreibung und Begr\"undung potenzieller zuk\"unftiger Folgeaktivit\"aten im Zusammenhang mit Ihrer Arbeit (z.B. weitere Anforderungen, Theoriebildung, ... ]
 
 
@@ -453,15 +434,15 @@ Umfangreicher Quell-Code sollte in den Anhang ausgelagert werden.]
 
 \printbibliography[
 heading=bibintoc,
-title={List of sources}
+title={Quellenverzeichnis}
 ]
 
 
 \newpage
 
-\chapter{List of abbreviations}
+\chapter{Abk\"urzungsverzeichnis}
 \newpage
-\chapter{Glossary}
+\chapter{Glossar}
 
 
 
@@ -473,7 +454,7 @@ title={List of sources}
 \chapter{Appendix}
 
 
-\section{Source code}
+\section{Quell-Code}
 
 \section{Tipps zum Schreiben Ihrer Abschlussarbeit}
 
@@ -500,14 +481,14 @@ title={List of sources}
 %\vspace*{18cm}
 \noindent
 
-\section*{Affidavit}
+\section*{Eidesstattliche Versicherung}
 Hiermit versichere ich an Eides statt durch meine Unterschrift, dass ich die vorstehende Arbeit selbstst\"andig und ohne fremde Hilfe angefertigt und alle Stellen, die ich w\"ortlich oder ann\"ahernd w\"ortlich aus Ver\"offentlichungen entnommen habe, als solche kenntlich gemacht habe, mich auch keiner anderen als der angegebenen Literatur oder sonstiger Hilfsmittel bedient habe. Die Arbeit hat in dieser oder \"ahnlicher Form noch keiner anderen Pr\"ufungsbeh\"orde vorgelegen.\\
 \linebreak[4]
 \linebreak[4]
 \linebreak[4]
 \linebreak[4]
 -------------------------------------------------------\linebreak[4]
-Date, Location, Signatur
+Datum, Ort, Unterschrift
 
 
 \end{appendix}
