more code cleanup, finish thesis and readme

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,8 @@
+@data{humanDNAsample,
+	title = {Menschenliche Beispiel-DNA für das Training},
+    note = {Online: \url{https://www.ncbi.nlm.nih.gov/nuccore/NC_000012.12?feature=any}; letzter Zugriff: 13.02.2023},
+}
+
 @article{MLgood2know,
     author = {Pedro, Domingos},
 	title = {A Few Useful Things to Know About Machine Learning},
